--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  /* background-color: #242424; */
 }
 
 
@@ -18,14 +17,17 @@ body {
 
 
 
-
 /* Todo styles */
 .app-container {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: #868282;
+  background-image: url('/images/todo bg.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
 }
 
 /* Style for TodoHeader Component */
@@ -38,8 +40,12 @@ body {
   padding: 3rem;
   height: 100%;
   width: 550px;
-  background-color: #1a1a1a;
   border-radius: 1rem;
+
+  background-image: url('/images/todo bg.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .todo-icon {
@@ -69,6 +75,11 @@ body {
   border-radius: 10px;
   font-size: 2rem;
   margin-right: 0.5rem;
+
+  background-image: url('/images/todo bg.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
 }
 
@@ -101,7 +112,6 @@ li {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-top: 1.5rem;
   text-align: center;
 
 
